added Crystalloid and their respective traits